--- a/inventory/pom.xml
+++ b/inventory/pom.xml
@@ -3,15 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.arxcess</groupId>
+        <artifactId>arxcess-app</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.arxcess</groupId>
-    <artifactId>arxcess-app</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>inventory</module>
-    </modules>
+    <groupId>com.arxcess.inventory</groupId>
+    <artifactId>inventory</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
