--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,14 +32,17 @@ jobs:
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+#workflows:
+#  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
+#    jobs:
+#      - build-and-test
+      
+workflows:
+  build-and-test:
     jobs:
       - build-and-test:
-        filters:
-          branches:
-            only:
-              - develop
-      
-
+          filters:
+            branches:
+              only:
+                - develop
