--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       # Use mvn clean and package as the standard maven build phase
       - run:
           name: Build
-          command: mvn -B -DskipTests clean package -pl arxcess-app
+          command: mvn -X -DskipTests clean package -pl arxcess-app
       # Then run your tests!
       - run:
           name: Test
