--- a/inventory/src/main/resources/application.properties
+++ b/inventory/src/main/resources/application.properties
@@ -3,12 +3,20 @@ quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=app
 quarkus.datasource.password=reactive
 
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=update
+%dev.quarkus.hibernate-orm.database.generation=create
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
 
 # Reactive config
-quarkus.datasource.reactive.url=mysql://localhost:3306/reactive_dev
+quarkus.datasource.reactive.url=mysql://localhost:3306/inventory
+%dev.quarkus.datasource.reactive.url=mysql://localhost:3306/inventory_dev
+%test.quarkus.datasource.reactive.url=mysql://localhost:3306/inventory_test
 
-quarkus.http.port=8081
+application.port=8080
+%dev.application.port=8081
+
+quarkus.http.port=${application.port}
+quarkus.http.test-port=${application.port}
 quarkus.http.cors=true
 quarkus.http.root-path=/inventory-api
 quarkus.http.host=0.0.0.0
