--- a/keycloak-authorization/src/main/resources/application.properties
+++ b/keycloak-authorization/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 quarkus.datasource.db-kind=mysql
 
-quarkus.datasource.username=root
-quarkus.datasource.password=
+quarkus.datasource.username=app
+quarkus.datasource.password=reactive
 
 quarkus.hibernate-orm.database.generation=update
 %dev.quarkus.hibernate-orm.database.generation=create
 %test.quarkus.hibernate-orm.database.generation=drop-and-create
 
 # Reactive config
-quarkus.datasource.reactive.url=mysql://localhost:3306/inventory
-%dev.quarkus.datasource.reactive.url=mysql://localhost:3306/inventory_dev
-%test.quarkus.datasource.reactive.url=mysql://localhost:3306/inventory_test
+quarkus.datasource.reactive.url=mysql://localhost:3306/authorization
+%dev.quarkus.datasource.reactive.url=mysql://localhost:3306/authorization_dev
+%test.quarkus.datasource.reactive.url=mysql://localhost:3306/authorization_test
 
-application.port=8080
-%dev.application.port=8081
+application.port=8082
+%dev.application.port=8083
 
 quarkus.http.port=${application.port}
 quarkus.http.test-port=${application.port}
 quarkus.http.cors=true
-quarkus.http.root-path=/inventory-api
+quarkus.http.root-path=/authorization-api
 quarkus.http.host=0.0.0.0
 %dev.quarkus.http.cors.origins=/.*/
 
@@ -28,3 +28,12 @@ quarkus.swagger-ui.path=${quarkus.http.root-path}/q/swagger-ui/
 quarkus.swagger-ui.theme=original
 quarkus.swagger-ui.doc-expansion=none
 quarkus.swagger-ui.operations-sorter=function (a, b) { var order = { "get": "0", "post": "1", "put": "2", "delete": "3" }; return order[a.get("method")].localeCompare(order[b.get("method")]); }
+
+%prod.quarkus.oidc.auth-server-url=http://localhost:8180/realms/quarkus
+quarkus.oidc.client-id=backend-service
+quarkus.oidc.credentials.secret=secret
+
+# Tell Dev Services for Keycloak to import the realm file
+# This property is not effective when running the application in JVM or Native modes
+
+quarkus.keycloak.devservices.realm-path=quarkus-realm.json
