--- a/inventory/src/main/resources/application.properties
+++ b/inventory/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.datasource.username=root
 quarkus.datasource.password=
 
 quarkus.hibernate-orm.database.generation=update
-%dev.quarkus.hibernate-orm.database.generation=create
+%dev.quarkus.hibernate-orm.database.generation=update
 %test.quarkus.hibernate-orm.database.generation=drop-and-create
 
 # Reactive config
