Initial RESTEasy commit

--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>inventory</module>
+        <module>inventory-reactive</module>
         <module>keycloak-authorization</module>
         <module>okta-authorization</module>
+        <module>inventory-imperative</module>
     </modules>
 
     <properties>
