Initial RESTEasy commit

--- a/inventory-resteasy-reactive/pom.xml
+++ b/inventory-resteasy-reactive/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>com.arxcess.inventory</groupId>
-    <artifactId>inventory-imperative</artifactId>
+    <artifactId>inventory-resteasy-reactive</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
